# Mizu

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json
Engine/: CMakeLists.txt
Engine/cmake/: CommonConfig.cmake  GamePackage.cmake  shader_utils.cmake
Engine/include/Mizu/: Mizu.h
Engine/shaders/: SimpleColor.slang
Engine/shaders/common/: FrameInfo.slang  Lights.slang  MizuBase.slang  PBRCommon.slang
Engine/shaders/deferred/: PBRLighting.slang  PBROpaque.slang  SSAO.slang  Shadowmapping.slang
Engine/shaders/environment/: IrradianceConvolution.slang  PrecomputeBRDF.slang  PrefilterEnvironment.slang
Engine/shaders/forwardplus/: CascadedShadowMapping.slang  CascadedShadowMappingDebug.slang  DepthNormalsPrepass.slang  DepthPrePass.slang  LightCulling.slang  LightCullingCommon.slang  LightCullingDebug.slang  PBROpaque.slang  SimpleLighting.slang
Engine/src/application/: application.cpp  application.h  entry_point.cpp  entry_point.h  layer.h  main_loop.cpp  main_loop.h  thread_sync.cpp  thread_sync.h  window.cpp  window.h
Engine/src/asset/: CMakeLists.txt
Engine/src/base/: CMakeLists.txt
Engine/src/core/: CMakeLists.txt  application.cpp  application.h  bounding_box.cpp  bounding_box.h  events.h  game_context.cpp  game_context.h  input.cpp  input.h  window.cpp  window.h
Engine/src/extensions/: CMakeLists.txt
Engine/src/input/: events.h  input.cpp  input.h
Engine/src/managers/: shader_manager.cpp  shader_manager.h
Engine/src/render/: CMakeLists.txt  camera.cpp  camera.h  draw_block_manager.cpp  draw_block_manager.h  render_graph_renderer.cpp  render_graph_renderer.h  render_graph_renderer_shaders.h  render_graph_renderer_shaders_provider.cpp  render_utils.cpp  render_utils.h  renderer.cpp  renderer.h  scene_renderer.cpp  scene_renderer.h
Engine/src/render_core/: CMakeLists.txt
Engine/src/render_core.dx12/: CMakeLists.txt
Engine/src/render_core.vulkan/: CMakeLists.txt
Engine/src/renderer/: camera.cpp  camera.h  draw_block_manager.cpp  draw_block_manager.h  lights.h  render_graph_renderer.cpp  render_graph_renderer.h  render_graph_renderer_settings.h  render_graph_renderer_shaders.h  render_graph_renderer_shaders_provider.cpp  render_utils.cpp  renderer.cpp  scene_renderer.cpp  scene_renderer.h
Engine/src/runtime/: CMakeLists.txt  entry_point.cpp  main_loop.cpp
Engine/src/scene/: components.h  entity.h  scene.cpp  scene.h  scene_definition.h
Engine/src/shader/: CMakeLists.txt
Engine/src/state_manager/: CMakeLists.txt  PLAN.md  base_state_manager.h  base_state_manager.inl.cpp  camera_state_manager.cpp  camera_state_manager.h  imgui_state_manager.cpp  imgui_state_manager.h  light_state_manager.cpp  light_state_manager.h  renderer_settings_state_manager.cpp  renderer_settings_state_manager.h  state_manager.h  state_manager_coordinator.cpp  state_manager_coordinator.h  static_mesh_state_manager.cpp  static_mesh_state_manager.h  transform_state_manager.cpp  transform_state_manager.h
Engine/src/utility/: filesystem.cpp  logging.h
Engine/tools/: CMakeLists.txt
Engine/tools/shader_compilation_pipeline/: CMakeLists.txt
Engine/tools/shader_pipeline/: shader_pipeline.cpp
Mizu/: CMakeLists.txt
Mizu/cmake/: shader_utils.cmake
Mizu/include/Mizu/: Mizu.h
Mizu/shaders/common/: MizuBase.slang  PBRCommon.slang
Mizu/shaders/deferred/: DepthPrePass.slang  PBRLighting.slang  PBROpaque.slang  SSAO.slang  Shadowmapping.slang  SimpleColor.slang  Skybox.slang
Mizu/shaders/environment/: PrecomputeBRDF.slang
Mizu/shaders/forward/: basic.frag
Mizu/shaders/presenter/: Present.slang  present.frag  present.vert
Mizu/src/core/: application.cpp  application.h  bounding_box.cpp  bounding_box.h  entry_point.cpp  entry_point.h  layer.h  uuid.cpp  uuid.h  window.cpp  window.h
Mizu/src/extensions/: CMakeLists.txt
Mizu/src/input/: events.h  input.cpp  input.h  keycodes.h
Mizu/src/managers/: shader_manager.cpp  (+1 more)
apps/: CMakeLists.txt  fragment.frag  pruebas.cpp
apps/custom/: main.cpp
apps/example/: invert.frag  invert.vert  main.cpp  monkey.fbx  simple.frag  simple.vert
apps/imgui_opengl/: main.cpp
apps/imgui_vulkan/: color.frag  invert.frag  main.cpp  vertex.vert
apps/pruebas/: main.cpp
examples/: CMakeLists.txt
examples/deferred/: main.cpp
examples/example/: main.cpp
examples/hello_triangle/: CMakeLists.txt  HelloTriangle.slang  Triangle.slang  hello_triangle_shader_provider.cpp  hello_triangle_shaders.h  main.cpp
examples/material_shader/: main.cpp
examples/plasma/: CMakeLists.txt  main.cpp  plasma_shader_provider.cpp  plasma_shaders.h
examples/sandbox/: CMakeLists.txt  main.cpp
examples/simple_rtx/: CMakeLists.txt  copy_shaders.h  main.cpp  simple_rtx_shader_provider.cpp  simple_rtx_shaders.h
examples/skybox/: main.cpp
examples/state_manager/: main.cpp
src/: CMakeLists.txt  buffers.cpp  buffers.h  command_buffer.cpp  command_buffer.h  framebuffer.cpp  framebuffer.h  graphics_pipeline.cpp  graphics_pipeline.h  render_pass.cpp  render_pass.h  renderer.cpp  renderer.h  resource_group.cpp  resource_group.h  shader.cpp  shader.h  synchronization.cpp  texture.cpp  texture.h
src/shader/: shader_transpiler.cpp
src/utility/: filesystem.cpp  filesystem.h  logging.h
tests/: CMakeLists.txt  buffers_tests.cpp  command_buffer_tests.cpp  framebuffer_tests.cpp  graphics_pipeline_tests.cpp  initialization_tests.cpp  main.cpp  render_pass_tests.cpp  resource_group_tests.cpp  resources_manager.cpp  resources_manager.h  shader.cpp  shader_tests.cpp  tests_common.h  texture.cpp  texture_tests.cpp
tests/base/: threads_tests.cpp
tests/renderer/: buffers_tests.cpp  command_buffer_tests.cpp  framebuffer_tests.cpp  graphics_pipeline_tests.cpp  initialization_tests.cpp  render_pass_tests.cpp  renderer_tests_common.h  resource_group_tests.cpp  shader_reflection_tests.cpp  shader_tests.cpp  texture_tests.cpp
tests/resources/: GraphicsShader_1.frag  GraphicsShader_1.vert  ReflectionShader.glsl.vert  ReflectionShader.slang  TestShader_1.frag  compile.sh
tests/scene/: entity.cpp  scene.cpp
(+1136 files in other folders)
